build(core) fix javadoc generation